tests/baselines/reference/jsdocTemplateTag.errors.txt
tests/cases/conformance/jsdoc/forgot.js(23,19): error TS2339: Property 'animate' does not exist on type 'Element'.


==== tests/cases/conformance/jsdoc/forgot.js (1 errors) ====
    /**
     * @param {T} a
     * @template T
     */
    function f(a) {
        return () => a
    }
    let n = f(1)()
    
    /**
     * @param {T} a
     * @template T
     * @returns {function(): T}
     */
    function g(a) {
        return () => a
    }
    let s = g('hi')()
    
    /**
     * @param {Array.<Object>} keyframes - Can't look up types on Element since it's a global in another file. (But it shouldn't crash).
     */
    Element.prototype.animate = function(keyframes) {};
                      ~~~~~~~
!!! error TS2339: Property 'animate' does not exist on type 'Element'.
    